--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "test": "jest",
     "build": "babel -D __tests__",
-		"serve": "markserv ./"
+    "serve": "markserv ./",
+    "next-dev": "next dev",
+    "next-build": "next build",
+    "next-start": "next start"
   },
   "jest": {
     "transform": {
@@ -20,11 +23,18 @@
     "@babel/core": "^7.11.6",
     "@babel/generator": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
     "babel-jest": "^26.5.0",
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-tester": "^10.0.0",
     "jest": "^26.5.0",
     "js-yaml": "^3.14.0",
     "markserv": "^1.17.4"
+  },
+  "dependencies": {
+    "directory-tree": "^2.2.5",
+    "next": "^9.5.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
