dynamic routes working

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "directory-tree": "^2.2.5",
     "next": "^9.5.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1"
   }
 }
